Loader: Limit mine logo size to fix moth jumpscare

--- a/less/components/loader.less
+++ b/less/components/loader.less
@@ -140,6 +140,11 @@
         padding: @spacer*2;
         border: 2px solid #A7A7A7;
 
+        & > img {
+            max-height: @spacer*10;
+            width: auto;
+        }
+
         & > img, & > svg {
             margin-bottom: @spacer;
         }
